# ResQ

./: .gitattributes  .gitignore  App.tsx  LICENSE  README.md  app.json  index.html  package-lock.json  package.json  settings.gradle.kts
.github/workflows/: android-build.yml
Documents/GitHub/ResQ/android/app/src/main/java/app/resq/: MainActivity.kt
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/llm/: gemma-4-E2B-it-IQ4_XS.gguf
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/cpp/llama.cpp/models/: ggml-vocab-gemma-4.gguf
app/src/main/java/com/example/resq/: LlamaNative.kt  MainActivity.kt  ModelDownloadWorker.kt  ResQApp.kt
app/src/main/java/com/example/resq/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/python/: llama_service.py
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  resq_ic_back_arrow.xml  resq_ic_blackout_red.xml  resq_ic_disaster_crack.xml  resq_ic_fire_red.xml  resq_ic_flood_red.xml  resq_ic_home_camera.xml  resq_ic_home_disaster_grid.xml  resq_ic_home_settings.xml  resq_ic_home_text.xml  resq_ic_quick_flashlight.xml  resq_ic_quick_phone.xml  resq_ic_quick_siren.xml  resq_ic_siren_red.xml  resq_ic_status_circle.xml  resq_ic_voice_mic.xml  resq_ic_voice_wave.xml  resq_ic_warning_red.xml
app/src/main/res/values/: themes.xml
app/src/main/res/xml/: file_paths.xml
artifacts/: ResQ.apk  app-debug.apk
docs/: submission-gap-review.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+2 files in other folders)
